feat: migrate jdk to 17 and spring boot to 3.0.5. Restructure code with jakarta