@@ -1,12 +1,11 @@
 package br.com.quaz.store.services.category;
 
-import br.com.quaz.store.repositories.CategoryRepository;
 import br.com.quaz.store.controllers.response.CategoryListResponse;
+import br.com.quaz.store.repositories.CategoryRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static br.com.quaz.store.services.converters.CategoryConverter.convertCategoryDTOToResponse;
 import static br.com.quaz.store.services.converters.CategoryConverter.convertCategoryEntityToDTO;
@@ -20,6 +19,6 @@ public class ListCategoryService {
         final var categoryList = categoryRepository.findAll();
         return categoryList.stream().map(category ->
                         convertCategoryDTOToResponse(convertCategoryEntityToDTO(category))
-                ).collect(Collectors.toList());
+                ).toList();
     }
 }
