@@ -1,15 +1,15 @@
 package br.com.quaz.store.services.wishlist;
 
+import br.com.quaz.store.controllers.response.ProductsListResponse;
 import br.com.quaz.store.exceptions.NotFoundException;
 import br.com.quaz.store.repositories.ProductRepository;
 import br.com.quaz.store.repositories.UserRepository;
-import br.com.quaz.store.controllers.response.ProductsListResponse;
+import br.com.quaz.store.repositories.WishListRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static br.com.quaz.store.helper.UserHelper.decoderTokenJwt;
 import static br.com.quaz.store.services.converters.ProductConverter.convertProductDTOToListResponse;
@@ -18,6 +18,7 @@ import static br.com.quaz.store.services.converters.ProductConverter.convertProd
 @Service
 @RequiredArgsConstructor
 public class GetWishListService {
+    private final WishListRepository wishListRepository;
     private final ProductRepository productRepository;
     private final UserRepository userRepository;
 
@@ -26,10 +27,12 @@ public class GetWishListService {
 
         final var user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new NotFoundException("User not found"));
-        final var productList = productRepository.findAllByLoggedUser(user.getEmail(), pageable);
+        final var wishListsProducts = wishListRepository.findAllByUser(user, pageable);
 
-        return productList.stream().map(productPage ->
-                        convertProductDTOToListResponse(convertProductEntityToDTO(productPage)))
-                .collect(Collectors.toList());
+        return wishListsProducts.stream().map(wishList -> {
+            final var productPage = productRepository.findById(wishList.getProduct().getUuid())
+                    .orElseThrow(() -> new NotFoundException("Product not found"));
+            return convertProductDTOToListResponse(convertProductEntityToDTO(productPage));
+        }).toList();
     }
 }
